# LinkShortener

./: .env  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 37e06ae663c1_test_3.py  6d33b05b271e_init_db2.py  a7295b0389b5_test_1.py  be12a861b528_test_2.py
src/: config.py  database.py  main.py
src/URLShortener/: constants.py  crud.py  dependencies.py  models.py  router.py  s3_service.py  schemas.py  service.py  utils.py
static/: script.js  styles.css
templates/: home.html
